--- a/webplayer/templates/preassessment.html
+++ b/webplayer/templates/preassessment.html
@@ -85,7 +85,7 @@
         <div class="card-body">
 
           <div class="container">
-            <h5 class="card-title text-center" id="current_videocount" style="text-align: center;font-size: 1.5rem;">这是第1个测试视频</h5>
+            <h5 class="card-title text-center" id="current_videocount" style="text-align: center;font-size: 1.5rem;">您当前已评估了0个测试视频</h5>
             <hr>
             <video
             id="my-video"
