add available serial check page,polish page

--- a/webplayer/templates/assessment.html
+++ b/webplayer/templates/assessment.html
@@ -86,7 +86,10 @@
             <p id="current_videocount_p" style="font-size: 1.2rem;">您当前已评估了{{ testednumber }}个视频，还有{{ testednumber|mul:-1|add:30 }}个视频需要评估。
               若有问题，请联系georgefen@qq.com</p>
           </strong>
-        
+          
+          <div class="alert alert-warning" role="alert">
+            若视频无法播放，可以尝试清理浏览器缓存。
+          </div>
         </div>
       </div>
 
