--- a/webplayer/templates/notice.html
+++ b/webplayer/templates/notice.html
@@ -17,7 +17,7 @@
       <p class="card-text"><strong>测试时长约为12-15分钟，期间请确保您看完整个视频。</strong>视频结束后，下方会出现相应指标。选择完成后点击“下一个视频”按钮，进入下一个视频。</p>
       <p class="card-text" style="color: crimson;">前5个为热身视频，打分不计入统计。完成前5个视频后，开始正式评估</p>
       <p class="card-text" style="color: crimson;"><strong>您一共有30个视频需要评估。</strong>视频没有声音。在给出您的评估前，视频支持拖动进度条回放。</p>
-    
+      <p class="card-text">若您没有一次评估完，可以输入相同的用户名、邮箱、序列号再次登录</strong>。</p><br>
       <p class="card-text">如有问题，请联系<strong>georgefen@qq.com</strong>。</p><br>
       <ul class="list-group" style="margin: 10px;">
         <li class="list-group-item">
