--- a/webplayer/templates/preassessment.html
+++ b/webplayer/templates/preassessment.html
@@ -73,6 +73,9 @@
             <p id="current_videocount_p" style="font-size: 1.2rem;">您当前已评估了0个测试视频，还有5个测试视频需要评估。
               若有问题，请联系georgefen@qq.com</p>
           </strong>
+          <div class="alert alert-warning" role="alert">
+            若视频无法播放，可以尝试清理浏览器缓存。
+          </div>
         
         </div>
       </div>
