--- a/webplayer/templates/preassessment.html
+++ b/webplayer/templates/preassessment.html
@@ -9,8 +9,7 @@
     <script>
       let testednumber=0;
       let dim1 = -1;
-      // let dim2 = -1;
-      // let dim3 = -1;
+      let dim2 = -1;
 
       function repaint_video(_testednumber){
         console.log(_testednumber);
@@ -20,15 +19,26 @@
         $('#current_videocount_p').text("您当前已评估了"+_testednumber+"个测试视频，还有"+(5-_testednumber)+"个测试视频需要评估。");
         $('#btn_submit').attr("disabled",true);
         dim1 = -1;
-        // dim2 = -1;
-        // dim3 = -1;
+        dim2 = -1;
+
         watchMaxTime = 0;
+        $("#btn1_4").prop('checked', false);
+        $("#btn1_3").prop('checked', false);
         $("#btn1_2").prop('checked', false);
         $("#btn1_1").prop('checked', false);
         $("#btn1_0").prop('checked', false);
+        $("#btn2_2").prop('checked', false);
+        $("#btn2_1").prop('checked', false);
+        $("#btn2_0").prop('checked', false);
       }
 
       $(function(){
+        $('#btn1_4').click(function(){
+         dim1 = 4;
+        })
+        $('#btn1_3').click(function(){
+         dim1 = 3;
+        })
         $('#btn1_2').click(function(){
          dim1 = 2;
         })
@@ -38,10 +48,19 @@
         $('#btn1_0').click(function(){
           dim1 = 0;
         })
+        $('#btn2_2').click(function(){
+          dim2 = 2;
+        })
+        $('#btn2_1').click(function(){
+          dim2 = 1;
+        })
+        $('#btn2_0').click(function(){
+          dim2 = 0;
+        })
 
         $('#btn_submit').click(function(){
           let videoid = $('#current_videoID').text();
-          if (dim1!=-1){
+          if (dim1!=-1&&dim2!=-1){
             if(testednumber<4){
                 testednumber++;
                 repaint_video(testednumber);
@@ -117,21 +136,43 @@
         <div class="card-body">
 
           <div class="container" id="qa_button" style="text-align: center">
+
             <div class="container">
-              
               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="d1" id="btn1_2" value="option1" />
-                <label class="form-check-label" for="inlineRadio1">视频人脸部分自然</label>
+                <input class="form-check-input" type="radio" name="d1" id="btn1_4" value="option5" />
+                <label class="form-check-label" for="inlineRadio1">人脸自然度高</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="d1" id="btn1_3" value="option4" />
+                <label class="form-check-label" for="inlineRadio2">人脸自然度较高</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="d1" id="btn1_2" value="option3" />
+                <label class="form-check-label" for="inlineRadio3">人脸自然度中等</label>
               </div>
               <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="d1" id="btn1_1" value="option2" />
+                <label class="form-check-label" for="inlineRadio1">人脸自然度较低</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="d1" id="btn1_0" value="option1" />
+                <label class="form-check-label" for="inlineRadio1">人脸自然度低</label>
+              </div>
+            </div>
+
+            <div class="container">
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="d2" id="btn2_2" value="option3" />
+                <label class="form-check-label" for="inlineRadio1">视频人脸真实</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="d2" id="btn2_1" value="option2" />
                 <label class="form-check-label" for="inlineRadio2">不确定</label>
               </div>
               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="d1" id="btn1_0" value="option3" />
-                <label class="form-check-label" for="inlineRadio3">视频人脸部分不自然</label>
+                <input class="form-check-input" type="radio" name="d2" id="btn2_0" value="option1" />
+                <label class="form-check-label" for="inlineRadio3">视频人脸伪造</label>
               </div>
-              
             </div>
             
             <button type="button" class="btn btn-primary" id="btn_submit" disabled>下一个视频</button>
