--- a/webplayer/templates/assessment.html
+++ b/webplayer/templates/assessment.html
@@ -142,12 +142,12 @@
         </div>
       </div>
 
-      <div class="card border border-light" style="box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);">
+      <div class="card border border-light" style="box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);margin-bottom: 1rem;">
         <div class="card-body">
 
           <div class="container" id="qa_button" style="text-align: center">
 
-            <div class="container">
+            <div class="alert alert-secondary" style="border: 0ch;margin: 3px;padding: 5px;">
               <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="d1" id="btn1_4" value="option5" />
                 <label class="form-check-label" for="inlineRadio1">人脸自然度高</label>
@@ -170,7 +170,7 @@
               </div>
             </div>
 
-            <div class="container">
+            <div class="alert alert-secondary" style="border: 0ch;margin: 3px;padding: 5px;">
               <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="d2" id="btn2_2" value="option3" />
                 <label class="form-check-label" for="inlineRadio1">视频人脸真实</label>
