--- a/webplayer/templates/preassessment.html
+++ b/webplayer/templates/preassessment.html
@@ -85,7 +85,7 @@
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;font-size: 1.5rem;">打分介绍</h5>
           <hr>
-          <p class="card-text" style="font-size: 1.15rem;">请您对右侧视频进行评价。从人脸自然度、面部表情逼真度、人脸整体清晰度分别评价。选择完成后，点击“下一个视频”按钮进入下一个视频。
+          <p class="card-text" style="font-size: 1.15rem;">请您对右侧视频进行评价。从人脸自然度、真实度分别评价。选择完成后，点击“下一个视频”按钮进入下一个视频。
           <strong>评价完五个测试视频后，进入正式评价环节，您将评价30个视频。</strong>
           </p>
           <strong>
@@ -140,23 +140,23 @@
             <div class="alert alert-secondary" style="border: 0ch;margin: 3px;padding: 5px;">
               <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="d1" id="btn1_4" value="option5" />
-                <label class="form-check-label" for="inlineRadio1">人脸自然度高</label>
+                <label class="form-check-label" for="inlineRadio1">人脸整体自然度高</label>
               </div>
               <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="d1" id="btn1_3" value="option4" />
-                <label class="form-check-label" for="inlineRadio2">人脸自然度较高</label>
+                <label class="form-check-label" for="inlineRadio2">人脸整体自然度较高</label>
               </div>
               <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="d1" id="btn1_2" value="option3" />
-                <label class="form-check-label" for="inlineRadio3">人脸自然度中等</label>
+                <label class="form-check-label" for="inlineRadio3">人脸整体自然度一般</label>
               </div>
               <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="d1" id="btn1_1" value="option2" />
-                <label class="form-check-label" for="inlineRadio1">人脸自然度较低</label>
+                <label class="form-check-label" for="inlineRadio1">人脸整体自然度较差</label>
               </div>
               <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="d1" id="btn1_0" value="option1" />
-                <label class="form-check-label" for="inlineRadio1">人脸自然度低</label>
+                <label class="form-check-label" for="inlineRadio1">人脸整体自然度差</label>
               </div>
             </div>
 
